<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meshball</string>
    <string name="common_version">Version %s</string>

    <string name="profile_screenname">Screen Name:</string>
    <string name="profile_screenname_hint">Your screen name...</string>
    <string name="profile_picture">Your picture:</string>
    <string name="profile_change_picture">(touch to change)</string>

    <string name="menu_players">Players</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>

    <string name="preferences_general">Meshball Settings</string>

    <string name="preferences_audio">Enable audio</string>
    <string name="preferences_audio_summary">Turn on or off audio.</string>
    <string name="preferences_audio_message">Enable to turn on audio effects.</string>
    <string name="preferences_handedness">Handedness: %s</string>
    <string name="preferences_handedness_title">Handedness</string>
    <string name="preferences_handedness_summary">Select the handedness of the fire button</string>

    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="how_to">How To</string>
    <string name="use">Use</string>
    <string name="pick">Pick</string>
    <string name="take">Take</string>
    <string name="right">Right</string>

    <string name="title_profile_picture">Your Profile Picture</string>

    <string name="toast_failed_to_delete_tmp_file">Failed to delete temporary file.</string>
    <string name="toast_service_terminated">Magnet Service Terminated</string>

    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>

    <string name="dlg_displayname_title">Missing Name</string>
    <string name="dlg_displayname_text">Sorry, but you need to have some name or way of identifying yourself.</string>

    <string name="dlg_no_camera_title">No Camera Available</string>
    <string name="dlg_no_camera_text">Sorry, but your device does not have a camera.</string>

    <string name="dlg_firsttime_title">First Time</string>
    <string name="dlg_firsttime_text">This is the first time you are using Meshball. Please setup your profile.\n\nNothing complicated, just a name and picture to display to identify you when you are in the game.</string>

    <string name="dlg_noservice_title">Missing</string>
    <string name="dlg_noservice_message">The Magnet Service does not yet appear to be installed. You must install the Magnet APK before you can use this application.</string>

    <string name="dlg_not_valid_sdk_title">Invalid SDK</string>
    <string name="dlg_not_valid_sdk_message">Sorry, but the SDK version is not valid for the installed Magnet Service.</string>

    <string name="dlg_disabled_wifi_message">Your wireless is currently disabled or you are not connected to a network. You need to enable your wireless in order to be able to share files.\n\nPress Settings to enable your wifi.</string>

    <string name="crop_option_error_message">No available crop option.</string>
    <string name="crop_option_choose_title">Choose Crop Option</string>
    <string name="crop_option_no_result_message">Sorry, but was unable to process image. Please pick another.</string>

    <!-- confirm_hit.xml -->
    <string name="confirm_lbl_txt">Confirm Hit:</string>
    <string name="hint_lbl_txt">Giraffe Master claims to have hit Foobar Fighter</string>
    <string name="confirm_hit_btn">Confirm</string>
    <string name="bad_hit_btn">Bad Shot</string>
    
    <!-- grid_item.xml -->
    <string name="grid_lbl_txt">Giraffe Master</string>
    
    <!-- main.xml -->
    <string name="review_counter_txt">0</string>
    <string name="score_lbl_txt">Score: %d</string>
    <string name="confirm_counter_txt">0</string>
    
    <!-- review_player.xml -->
    <string name="review_lbl_txt">Review Hit:</string>
    <string name="hint_labl_txt">Scroll through list and match the player:</string>
    <string name="hint_labl2_txt">Click on the player to \'Hit\' them</string>

</resources>
